--- a/src/main/java/com/kodigithubpagesdemo/index.html
+++ b/src/main/java/com/kodigithubpagesdemo/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
-    <link rel="stylesheet" href="main/resources/templates/styles.css" type="text/css">
+    <link rel="stylesheet" href="../../../resources/templates/styles.css" type="text/css">
 </head>
 <body>
 <div>
     <h1>Hello World from github pages!</h1>
-    <img src="main/resources/static/earth.png" alt="Earth">
+    <img src="../../../resources/static/earth.png" alt="Earth">
 </div>
 </body>
 </html>
